--- a/source/TFeatureRunner.cls
+++ b/source/TFeatureRunner.cls
@@ -15,28 +15,46 @@ Public Sub setup(Session As TSession)
     Set m_session = Session
 End Sub
 
-Public Sub run_feature(feature As TFeature, Optional filter_tag)
+Public Sub run_feature(example_container As TExampleContainer, Optional filter_tag)
     
-    Dim feature_clause As Variant
+    Dim feature_section As Variant
     Dim example As TExample
     Dim example_runner As TExampleRunner
+    Dim current_rule As TExampleContainer
 
     If IsMissing(filter_tag) Then filter_tag = vbNullString
     Set example_runner = New TExampleRunner
     example_runner.setup m_session
-    m_session.Reporter.report REPORT_MSG_TYPE_FEATURE_NAME, feature.Name
-    m_session.Reporter.report REPORT_MSG_TYPE_DESC, feature.Description
-    For Each feature_clause In feature.sections
-        If TypeName(feature_clause) = "TExample" Then
-            Set example = feature_clause
+    If TypeName(feature_section) = "TFeature" Then
+        m_session.Reporter.report REPORT_MSG_TYPE_FEATURE_NAME, example_container.name
+        m_session.Reporter.report REPORT_MSG_TYPE_DESC, example_container.description
+    Else
+        m_session.Reporter.report REPORT_MSG_TYPE_RULE, example_container.wholeName
+    End If
+    For Each feature_section In example_container.sections
+        If TypeName(feature_section) = "TExample" Then
+            Set example = feature_section
             If filter_tag = vbNullString Or ExtraVBA.collection_has_key(filter_tag, example.tags) = True Then
-                If feature.Background.Steps.Count > 0 Then example.insert_background_steps feature.Background.Steps
+                If Not example_container.parent Is Nothing Then
+                    If example_container.parent.background.Steps.Count > 0 Then
+                        'if the examplecontainer is a rule then consider also the background
+                        ' steps from the parent feature
+                        example.insert_background_steps example_container.parent.background.Steps
+                    End If
+                End If
+                If example_container.background.Steps.Count > 0 Then example.insert_background_steps example_container.background.Steps
                 example_runner.run_example example
             End If
-        ElseIf TypeName(feature_clause) = "TRule" Then
-            m_session.Reporter.report REPORT_MSG_TYPE_RULE, feature_clause.WholeRule
+        ElseIf TypeName(feature_section) = "TRule" Then
+            Set current_rule = feature_section
+            ' a rule can contain  examples like a feature > so run it like a feature
+            run_feature current_rule, filter_tag
         End If
     Next
-    m_session.statistics.log_event LOG_TYPE_FEATURE, feature.Name, ExtraVBA.get_unix_timestamp_now
+    If TypeName(feature_section) = "TFeature" Then
+        m_session.statistics.log_event LOG_TYPE_FEATURE, example_container.wholeName, ExtraVBA.get_unix_timestamp_now
+    Else
+        m_session.statistics.log_event LOG_TYPE_RULE, example_container.wholeName, ExtraVBA.get_unix_timestamp_now
+    End If
 End Sub
 
