[chore] add examples for parsing and inheriting tags

--- a/step_definitions/Steps_parse_tags.cls
+++ b/step_definitions/Steps_parse_tags.cls
@@ -17,7 +17,7 @@ Public Sub Then_the_parsed_features_contains_the_tags_STR_013B39CE37F4(step_expr
     
     tags = Split(step_expressions(1), ",")
     For Each tag In tags
-        TSpec.expect(m_parsed_feature.tags(Trim(tag))).to_be Trim(tag)
+        TSpec.expect(m_parsed_feature.tags).contains_member Trim(tag)
     Next
 End Sub
 
@@ -29,7 +29,7 @@ Public Sub Then_the_parsed_example_contains_the_tags_STR_013B99DC06E4(step_expre
     
     tags = Split(step_expressions(1), ",")
     For Each tag In tags
-        TSpec.expect(TStepVars.example.tags(Trim(tag))).to_be Trim(tag)
+        TSpec.expect(TStepVars.example.tags).contains_member Trim(tag)
     Next
 End Sub
 
@@ -48,6 +48,41 @@ Public Sub Then_the_parsed_second_example_contains_the_tags_S_E5AA0E4C4719(step_
     
     tags = Split(step_expressions(1), ",")
     For Each tag In tags
-        TSpec.expect(TStepVars.example.tags(Trim(tag))).to_be Trim(tag)
+        TSpec.expect(TStepVars.example.tags).contains_member Trim(tag)
     Next
 End Sub
+
+Public Sub Then_the_parsed_rule_contains_the_tags_STR_7B67E25E94E1(step_expressions As Collection)
+    'Then the parsed rule contains the tags {string}
+    
+    Dim rule As TRule
+    Dim tags As Variant
+    Dim tag As Variant
+    
+    Set rule = m_parsed_feature.sections(1)
+    tags = Split(step_expressions(1), ",")
+    For Each tag In tags
+        TSpec.expect(rule.tags).contains_member Trim(tag)
+    Next
+End Sub
+
+Public Sub Then_the_included_example_contains_the_tags_STR_33546FCE3943(step_expressions As Collection)
+    'And the included example contains the tags {string}
+    
+    Dim included_example As TExample
+    Dim tags As Variant
+    Dim tag As Variant
+    
+    If TypeName(m_parsed_feature.sections(1)) = "TExample" Then
+        'example is 1st section of the feature
+        Set included_example = m_parsed_feature.sections(1)
+    Else
+        '1st section of the feature is a rule with one example
+        Set included_example = m_parsed_feature.sections(1).sections(1)
+    End If
+    tags = Split(step_expressions(1), ",")
+    For Each tag In tags
+        TSpec.expect(included_example.tags).contains_member Trim(tag)
+    Next
+End Sub
+
